[gd_scene load_steps=12 format=1]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://menu/cat-bg1.png" type="Texture" id=2]
[ext_resource path="res://menu/logo1.png" type="Texture" id=3]
[ext_resource path="res://fonts/Aller_Bd.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://theme/main.tres" type="Theme" id=5]
[ext_resource path="res://menu/logo2.png" type="Texture" id=6]
[ext_resource path="res://menu/level_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/Oswald-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]

font/size = 24
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]

font/size = 48
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 8 )

[node name="menu" type="Node"]

script/script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
modulate = Color( 0.394531, 0.858093, 1, 1 )
region = true
region_rect = Rect2( 0, 0, 2512, 1612 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1335.0
margin/top = 1045.0
margin/right = 1682.0
margin/bottom = 1073.0
custom_fonts/font = SubResource( 2 )
text = "Cat-O-Pult   version 1.0 by Noro"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CenterContainer" type="CenterContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 847.0
margin/top = 448.0
margin/right = 1072.0
margin/bottom = 632.0
alignment = 0

[node name="b_newgame" type="Button" parent="CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 225.0
margin/bottom = 43.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "START GAME"
flat = false

[node name="b_story" type="Button" parent="CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 47.0
margin/right = 225.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "READ STORY"
flat = false

[node name="b_options" type="Button" parent="CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 94.0
margin/right = 225.0
margin/bottom = 137.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "FULLSCREEN OFF"
flat = false

[node name="b_quit" type="Button" parent="CenterContainer/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 141.0
margin/right = 225.0
margin/bottom = 184.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT"
flat = false

[node name="HomepageLink" type="LinkButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1702.0
margin/top = 1045.0
margin/right = 1908.0
margin/bottom = 1073.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "http://noro.itch.io"

[node name="levels" type="Node2D" parent="."]

visibility/visible = false

[node name="bg" type="Sprite" parent="levels"]

texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 2512, 1612 )

[node name="Sprite" type="Sprite" parent="levels"]

transform/pos = Vector2( 480, 0 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false
modulate = Color( 0.363281, 0.229889, 0, 1 )

[node name="Label" type="Label" parent="levels"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 106.0
text = "SELECT LEVEL"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="level_container" type="GridContainer" parent="levels"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 291.0
margin/top = 160.0
margin/right = 1608.0
margin/bottom = 960.0
columns = 10

[node name="level_button" parent="levels/level_container" instance=ExtResource( 7 )]

margin/right = 128.0
margin/bottom = 128.0
level = "level1"

[node name="level_button1" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 132.0
margin/right = 260.0
margin/bottom = 128.0
level = "level2"
num_display = "02"

[node name="level_button2" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 264.0
margin/right = 392.0
margin/bottom = 128.0
level = "level3"
num_display = "03"

[node name="level_button3" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 396.0
margin/right = 524.0
margin/bottom = 128.0
level = "level4"
num_display = "04"

[node name="level_button4" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 528.0
margin/right = 656.0
margin/bottom = 128.0
level = "level5"
num_display = "05"

[node name="level_button5" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 660.0
margin/right = 788.0
margin/bottom = 128.0
level = "level6"
num_display = "06"

[node name="level_button6" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 792.0
margin/right = 920.0
margin/bottom = 128.0
level = "level7"
num_display = "07"

[node name="level_button7" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 924.0
margin/right = 1052.0
margin/bottom = 128.0
level = "level8"
num_display = "08"

[node name="level_button8" parent="levels/level_container" instance=ExtResource( 7 )]

margin/left = 1056.0
margin/right = 1184.0
margin/bottom = 128.0
level = "level9"
num_display = "09"

[node name="level_button9" parent="levels/level_container" instance=ExtResource( 7 )]

editor/display_folded = true
margin/left = 1188.0
margin/right = 1316.0
margin/bottom = 128.0
level = "level10"
num_display = "10"

[node name="back" type="Button" parent="levels"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 915.0
margin/top = 1024.0
margin/right = 1010.0
margin/bottom = 1067.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[node name="story" type="Node2D" parent="."]

visibility/visible = false

[node name="bg" type="Sprite" parent="story"]

texture = ExtResource( 2 )
centered = false
modulate = Color( 0.81955, 0.683594, 1, 1 )
region = true
region_rect = Rect2( 0, 0, 2512, 1612 )

[node name="Label" type="Label" parent="story"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 926.0
custom_fonts/font = SubResource( 1 )
text = "A long time ago there was an unconquerable fortress of dwarven nation.\nMany tried to conquer it but all failed. All but one.\nOne cunny human found an ancient text that stated about hidden weakness of all dwarves.\nAnd that one weakness to be the cats. No dwarf could withstand cat\'s furry embrace.\nSo cunny human constructed Cat-O-Pult, a weapon of ancient lore,\nand marched to conquer a dwarven fortress with the army of cats."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back" type="Button" parent="story"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 5 )
margin/left = 915.0
margin/top = 1024.0
margin/right = 1010.0
margin/bottom = 1067.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BACK"
flat = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/b_newgame" to="." method="_on_b_newgame_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/b_story" to="." method="_on_b_story_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/b_options" to="." method="_on_b_options_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/b_quit" to="." method="_on_b_quit_pressed"]

[connection signal="pressed" from="HomepageLink" to="." method="_on_HomepageLink_pressed"]

[connection signal="pressed" from="levels/back" to="." method="_on_back_pressed"]

[connection signal="pressed" from="story/back" to="." method="_on_back_pressed"]


